--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.3-1) unstable; urgency=low
+
+  * Bug #45538: fix OID clash in LDAP schema
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 Jan 2019 15:40:09 +0100
+
 ucs-school-import (17.0.2-3) unstable; urgency=medium
 
   * Bug #48226: Fix script call in join script
