--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (8.0.2-3) unstable; urgency=low
+
+  * Bug #48509: Trim exam name for filename
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Tue, 29 Jan 2019 10:13:34 +0100
+
 ucs-school-umc-exam (8.0.2-2) unstable; urgency=low
 
   * Bug #43037: Change label for file share restriction
@@ -912,7 +918,7 @@ ucs-school-umc-exam (0.1.17-1) unstable; urgency=low
 
 ucs-school-umc-exam (0.1.16-1) unstable; urgency=low
 
-  * Bug #31158: read max upload size from UCR variable umc/server/upload/max 
+  * Bug #31158: read max upload size from UCR variable umc/server/upload/max
 
  -- Alexander Kläser <klaeser@univention.de>  Wed, 08 May 2013 15:54:09 +0200
 
