--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.2-3) unstable; urgency=low
+
+  * Bug #48099: Extend validation for computer object
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 07 Feb 2019 09:54:23 +0100
+
 ucs-school-lib (11.0.2-2) unstable; urgency=low
 
   * Bug #48429: fix get_all() for School objects
