--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-6) unstable; urgency=medium
+
+  * Bug #47955: credentials for create_spn_account
+
+ -- Felix Botner <botner@univention.de>  Fri, 08 Feb 2019 16:34:21 +0100
+
 ucs-school-metapackage (12.0.0-5) unstable; urgency=medium
 
   * Bug #48540: Fix typo in demo portal
