--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.4-2) unstable; urgency=low
+
+  * Bug #48478: bump
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 11 Feb 2019 16:05:10 +0100
+
 ucs-school-import (17.0.4-1) unstable; urgency=medium
 
   * Bug #48534: do not add dns-hostname to ignore list
