--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-8) unstable; urgency=medium
+
+  * Bug #48534: ignore bashism
+
+ -- Felix Botner <botner@univention.de>  Mon, 11 Feb 2019 16:13:52 +0100
+
 ucs-school-metapackage (12.0.0-7) unstable; urgency=medium
 
   * Bug #48534: do not add dns-hostname to ignore list
