--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-9) unstable; urgency=medium
+
+  * Bug #48063: remove ucs-school-umc-csv-import from recommended packages
+
+ -- Florian Best <best@univention.de>  Tue, 12 Feb 2019 10:10:51 +0100
+
 ucs-school-metapackage (12.0.0-8) unstable; urgency=medium
 
   * Bug #48534: ignore bashism
