--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-8) unstable; urgency=medium
+
+  * Bug #48063: remove ucs-school-umc-csv-import tests
+
+ -- Florian Best <best@univention.de>  Tue, 12 Feb 2019 10:41:08 +0100
+
 ucs-test-ucsschool (6.0.0-7) unstable; urgency=low
 
   * Bug #48099: adjust ucs-test script to new UMC module behaviour
