Bug #48063: break/conflict and replace ucs-school-umc-csv-import
ucs-school-umc-csv-import has been removed. Remove the package therefore
during Upgrade to UCS@school 4.4. The "Replaces" line can be removed in
the future.

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-10) unstable; urgency=medium
+
+  * Bug #48063: break/conflict and replace ucs-school-umc-csv-import
+
+ -- Florian Best <best@univention.de>  Tue, 12 Feb 2019 11:14:45 +0100
+
 ucs-school-metapackage (12.0.0-9) unstable; urgency=medium
 
   * Bug #48063: remove ucs-school-umc-csv-import from recommended packages
