--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.4-3) unstable; urgency=low
+
+  * Bug #48649: improve error message
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 12 Feb 2019 13:51:44 +0100
+
 ucs-school-import (17.0.4-2) unstable; urgency=low
 
   * Bug #48478: bump
