--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.0-6) unstable; urgency=low
+
+  * Bug #48649: fix updating of ucsschool_roles attribute
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 12 Feb 2019 13:51:56 +0100
+
 ucs-school-lib (12.1.0-5) unstable; urgency=medium
 
   * Bug #48647: fix roles for admin group
