--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (4.0.0-1) unstable; urgency=low
+
+  * Bug #48063: remove ucs-school-umc-csv-import translations
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 12 Feb 2019 15:13:24 +0100
+
 ucs-school-l10n-fr (4.0.0-0) unstable; urgency=medium
 
   * bump version for UCS@school 4.4
