--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-metapackage (12.0.0-11) unstable; urgency=low
+
+  * Bug #47969:
+    - fix hook datatype
+    - also register join hook in single server environment
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 12 Feb 2019 16:03:28 +0100
+
 ucs-school-metapackage (12.0.0-10) unstable; urgency=medium
 
   * Bug #48063: break/conflict and replace ucs-school-umc-csv-import
