--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.0-7) unstable; urgency=medium
+
+  * Bug #48647: Add a new BasicSchoolGroup which supports the school attribute
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 13 Feb 2019 13:51:36 +0100
+
 ucs-school-lib (12.1.0-6) unstable; urgency=low
 
   * Bug #48649: fix updating of ucsschool_roles attribute
