--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-11) unstable; urgency=medium
+
+  * Bug #48667: klassen.py expect ucsschool_roles from umc
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 13 Feb 2019 14:23:54 +0100
+
 ucs-test-ucsschool (6.0.0-10) unstable; urgency=low
 
   * Bug #48651: adapt to changed default of normalize:firstname and
