--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-12) unstable; urgency=low
+
+  * Bug #46969: Fix hook argument
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 13 Feb 2019 14:25:10 +0100
+
 ucs-school-metapackage (12.0.0-11) unstable; urgency=low
 
   * Bug #47969:
