--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-13) unstable; urgency=medium
+
+  * Bug #46969: fix commandline option name
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 13 Feb 2019 16:33:07 +0100
+
 ucs-school-metapackage (12.0.0-12) unstable; urgency=low
 
   * Bug #46969: Fix hook argument
