--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-14) unstable; urgency=medium
+
+  * Bug #46969: fix import
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 13 Feb 2019 17:26:39 +0100
+
 ucs-school-metapackage (12.0.0-13) unstable; urgency=medium
 
   * Bug #46969: fix commandline option name
