--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (7.0.0-1) unstable; urgency=medium
+
+  * Bug #48665: update PackageManager cache after apt update
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 14 Feb 2019 11:14:50 +0100
+
 ucs-school-umc-installer (7.0.0-0) unstable; urgency=low
 
   * bump version for UCS@school 4.4
