--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.4-4) unstable; urgency=low
+
+  * Bug #48678: old legacy import now sets options, ucsschool_roles and schools
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 14 Feb 2019 13:11:37 +0100
+
 ucs-school-import (17.0.4-3) unstable; urgency=low
 
   * Bug #48649: improve error message
