--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-13) unstable; urgency=low
+
+  * Bug #48678: old legacy import now sets options, ucsschool_roles and schools
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 14 Feb 2019 13:09:31 +0100
+
 ucs-test-ucsschool (6.0.0-12) unstable; urgency=medium
 
   * Bug #48668: schoolroom.py expect ucsschool_roles from umc
