--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-metapackage (12.0.0-15) unstable; urgency=low
+
+  * Bug #47969:
+    - fix merged arguments for univention-app
+    - fix missing paths for ucr/univention-app if called via univention-ssh
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 14 Feb 2019 13:44:54 +0100
+
 ucs-school-metapackage (12.0.0-14) unstable; urgency=medium
 
   * Bug #47969: fix import
