--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-17) unstable; urgency=low
+
+  * Bug #47969: fix wrong search filter
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 14 Feb 2019 22:37:07 +0100
+
 ucs-school-metapackage (12.0.0-16) unstable; urgency=low
 
   * Bug #47969: install UCS@school only if there is at least one meta
