Bug #47969: fix shebang
Switch to bash for /usr/share/univention-samba4/lib/all.sh

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-18) unstable; urgency=medium
+
+  * Bug #47969: fix shebang in 62ucs-school-central-slave.inst
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 14 Feb 2019 23:45:32 +0100
+
 ucs-school-metapackage (12.0.0-17) unstable; urgency=low
 
   * Bug #47969: fix wrong search filter
