--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-19) unstable; urgency=medium
+
+  * Bug #47969: Fix joinscript order and typo
+
+ -- Jürn Brodersen <brodersen@univention.de>  Fri, 15 Feb 2019 12:16:45 +0100
+
 ucs-school-metapackage (12.0.0-18) unstable; urgency=medium
 
   * Bug #47969: fix shebang in 62ucs-school-central-slave.inst
