--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (6.0.0-15) unstable; urgency=low
+
+  * Bug #48651: fix 113_import_factory_configurability, 23_password_reset,
+    70_users_module
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 15 Feb 2019 12:24:51 +0100
+
 ucs-test-ucsschool (6.0.0-14) unstable; urgency=medium
 
   * Bug #48651: Remove school attribute for domain admins
