--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-16) unstable; urgency=medium
+
+  * Bug #48651: Fix various problems with due to not replicated objects
+
+ -- Jürn Brodersen <brodersen@univention.de>  Fri, 15 Feb 2019 15:12:10 +0100
+
 ucs-test-ucsschool (6.0.0-15) unstable; urgency=low
 
   * Bug #48651: fix 113_import_factory_configurability, 23_password_reset,
