--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-22) unstable; urgency=low
+
+  * Bug #47969: update appcenter cache before installing UCS@school
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 15 Feb 2019 16:45:24 +0100
+
 ucs-school-metapackage (12.0.0-21) unstable; urgency=low
 
   * Bug #47969: update appcenter cache before installing UCS@school
