--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.4-4) unstable; urgency=low
+
+  * Bug #48099: adjust ucs-test script to use ignore_warning option
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 18 Feb 2019 07:58:35 +0100
+
 ucs-test-ucsschool (5.0.4-3) unstable; urgency=low
 
   * Bug #48099: adjust ucs-test script to new UMC module behaviour
