--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-17) unstable; urgency=medium
+
+  * Bug #48099: Respect ignore_warning flag
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 18 Feb 2019 08:05:38 +0100
+
 ucs-test-ucsschool (6.0.0-16) unstable; urgency=medium
 
   * Bug #48651: Fix various problems with due to not replicated objects
