--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (11.0.0-2) unstable; urgency=medium
+
+  * Bug #48099: Optimize object iteration in create_computer method
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 18 Feb 2019 11:32:35 +0200
+
 ucs-school-umc-wizards (11.0.0-1) unstable; urgency=medium
 
   * Bug #48099: Respect validation warning in computer wizard
