--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-metapackage (12.0.0-23) unstable; urgency=medium
+
+  * Bug 47941: set connector/s4/mapping/dc/disable_delete_in_ucs?false
+    for "central" connector
+
+ -- Felix Botner <botner@univention.de>  Mon, 18 Feb 2019 13:22:23 +0100
+
 ucs-school-metapackage (12.0.0-22) unstable; urgency=low
 
   * Bug #47969: update appcenter cache before installing UCS@school
