--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-19) unstable; urgency=low
+
+  * Bug #48651: handle ucsschool_roles in computer objects
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 18 Feb 2019 15:23:20 +0100
+
 ucs-test-ucsschool (6.0.0-18) unstable; urgency=medium
 
   * Bug #48651: Do not wait for staff replication on slave
