--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (15.0.0-1) unstable; urgency=medium
+
+  * Bug #48699: Add reworked logo
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Tue, 19 Feb 2019 08:34:10 +0200
+
 ucs-school-netlogon-user-logonscripts (15.0.0-0) unstable; urgency=medium
 
   * bump version for UCS@school 4.4
