--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-20) unstable; urgency=low
+
+  * Bug #48651: fix import error
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 19 Feb 2019 09:22:35 +0100
+
 ucs-test-ucsschool (6.0.0-19) unstable; urgency=low
 
   * Bug #48651: handle ucsschool_roles in computer objects
