--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,12 @@
+ucs-school-import (17.0.4-6) unstable; urgency=low
+
+  * Bug #48519: UDM hook to add ucsschoolRole property to computer client
+    objects and memberserver objects
+  * OU-post-create hook to add ucsschoolRole property to singlemaster and
+    school slave objects
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 19 Feb 2019 17:30:26 +0100
+
 ucs-school-import (17.0.4-5) unstable; urgency=low
 
   * Bug #48519: attach UDM hook to UDM computer objects
