--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (7.0.0-3) unstable; urgency=medium
+
+  * Bug #48681: Completely remove postinst script
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 20 Feb 2019 08:30:40 +0100
+
 ucs-school-umc-installer (7.0.0-2) unstable; urgency=medium
 
   * Bug #48681: deactivate root access to schoolinstaller/ umcp commands
